Update stack->data to use block allocation
stack->data and the associated functions now use block
allocation instead of a single linked list. This is more
efficient because a malloc for every push is expensive.

Note: all unit tests are not implemented correctly and only a few
pass, most of the are commented out.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,7 @@
 CC = clang
 CFLAGS = -std=c99 -Wall -Werror -Wpedantic -g
+USANITIZE = -fsanitize=undefined
+MSANITIZE = -fsanitize=address -fno-omit-frame-pointer
 
 .PHONY: clean
 .PHONY: test
@@ -7,16 +9,16 @@ CFLAGS = -std=c99 -Wall -Werror -Wpedantic -g
 all: clean build test
 
 build: test_stack.o
-	$(CC) $(CFLAGS) stack.o test_stack.o unity.o -o test_stack
+	$(CC) $(CFLAGS) $(USANITIZE) stack.o test_stack.o unity.o -o test_stack
 
 test_stack.o: unity.o
-	$(CC) $(CFLAGS) -c test_stack.c
+	$(CC) $(CFLAGS) $(USANITIZE) -c test_stack.c
 
 unity.o: stack.o
-	$(CC) $(CFLAGS) -c unity.c
+	$(CC) $(CFLAGS) $(USANITIZE) -c unity.c
 
 stack.o: ../src/stack.c
-	$(CC) $(CFLAGS) -c ../src/stack.h ../src/stack.c
+	$(CC) $(CFLAGS) $(USANITIZE) -c ../src/stack.h ../src/stack.c
 
 clean:
 	rm -f stack stack.o test_stack.o unity.o
